--- a/views/report_partnerledger.xml
+++ b/views/report_partnerledger.xml
@@ -29,15 +29,15 @@
                     <table class="table table-condensed">
                         <thead>
                             <tr>
-                                <th>Date</th>
-                                <th>JRNL</th>
-                                <th>Account</th>
-                                <th>Ref</th>
-                                <th>Debit</th>
-                                <th>Credit</th>
-                                <th>Balance</th>
-                                <th t-if="amount_currency">Currency</th>
-                                <th>Match.</th>
+                                <th class="col-xs-2">Date</th>
+                                <th class="col-xs-1">JRNL</th>
+                                <th class="col-xs-1">Account</th>
+                                <th class="col-xs-3">Ref</th>
+                                <th class="col-xs-1">Debit</th>
+                                <th class="col-xs-1">Credit</th>
+                                <th class="col-xs-1">Balance</th>
+                                <th class="col-xs-1" t-if="amount_currency">Currency</th>
+                                <th class="col-xs-1">Match.</th>
                             </tr>
                         </thead>
                         <t t-foreach="docs" t-as="o">
