[IMP] Add accounts to exclude

--- a/wizard/account_report_partner_ledger_view.xml
+++ b/wizard/account_report_partner_ledger_view.xml
@@ -33,6 +33,9 @@
                     <group col="3">
                         <field name="partner_ids" widget="many2many_tags" options="{'no_create': True}"/>
                     </group>
+                    <group col="3">
+                        <field name="account_exclude_ids" widget="many2many_tags" options="{'no_create': True}"/>
+                    </group>
                 </xpath>
             </field>
         </record>
