[IMP] Oder by name of partner, not by code

--- a/views/report_partnerledger.xml
+++ b/views/report_partnerledger.xml
@@ -27,8 +27,7 @@
                                 <tbody>
                                     <tr>
                                         <td colspan="8">
-                                            <strong t-esc="o.ref"/>
-                                            - <strong t-esc="o.name"/>
+                                            <strong t-esc="o.name"/>
                                         </td>
                                     </tr>
                                     <tr>
