--- a/views/report_partnerledger.xml
+++ b/views/report_partnerledger.xml
@@ -1,120 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
+
     <template id="report_partnerledger">
         <t t-call="report.html_container">
             <t t-set="data_report_margin_top" t-value="12"/>
             <t t-set="data_report_header_spacing" t-value="9"/>
             <t t-set="data_report_dpi" t-value="110"/>
-            <t t-foreach="docs" t-as="o">
-                <t t-call="report.internal_layout">
-                    <div class="page">
-                        <h2>Partner Ledger</h2>
+            <t t-call="report.internal_layout">
+                <div class="page">
+                    <h2>Partner Ledger</h2>
 
-                        <div class="row">
-                            <div class="col-xs-3">
-                                <strong>Company:</strong>
-                                <p t-esc="res_company.name"/>
-                            </div>
-                            <div class="col-xs-3">
-                                <t t-if="data['form']['date_from']">
-                                    <strong>Date from :</strong>
-                                    <span t-esc="data['form']['date_from']"/><br/></t>
-                                <t t-if="data['form']['date_to']">
-                                    <strong>Date to :</strong>
-                                    <span t-esc="data['form']['date_to']"/></t>
-                            </div>
-                            <div class="col-xs-3">
-                                <strong>Target Moves:</strong>
-                                <p t-if="data['form']['target_move'] == 'all'">All Entries</p>
-                                <p t-if="data['form']['target_move'] == 'posted'">All Posted Entries</p>
-                            </div>
+                    <div class="row">
+                        <div class="col-xs-3">
+                            <strong>Company:</strong>
+                            <p t-esc="res_company.name"/>
                         </div>
-                        <table class="table table-condensed">
-                            <t t-foreach="docs" t-as="o">
-                                <tbody>
-                                    <tr>
-                                        <td colspan="8">
-                                            <strong t-esc="o.name"/>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <th class="col-xs-1">Date</th>
-                                        <th class="col-xs-1">JRNL</th>
-                                        <th class="col-xs-1">Account</th>
-                                        <th class="col-xs-4">Ref</th>
-                                        <th class="col-xs-1">Match.</th>
-                                        <th class="col-xs-1 text-right">Debit</th>
-                                        <th class="col-xs-1 text-right">Credit</th>
-                                        <th class="col-xs-1 text-right">Balance</th>
-                                        <th class="col-xs-1" t-if="amount_currency">Currency</th>
-                                    </tr>
-                                    <tr t-if="data['form']['date_from']">
-                                        <td colspan="3"></td>
-                                        <td colspan="2">
-                                            <span style="font-style: italic;">Initial Balance</span>
-                                        </td>
-                                        <td class="text-right">
-                                            <span style="font-style: italic;" t-esc="initial_balance_partner(data, o, 'debit')" t-esc-options='{"widget": "monetary", "display_currency": "res_company.currency_id"}'/>
-                                        </td>
-                                        <td class="text-right">
-                                            <span style="font-style: italic;" t-esc="initial_balance_partner(data, o, 'credit')" t-esc-options='{"widget": "monetary", "display_currency": "res_company.currency_id"}'/>
-                                        </td>
-                                        <td class="text-right">
-                                            <span style="font-style: italic;" t-esc="initial_balance_partner(data, o, 'debit - credit')" t-esc-options='{"widget": "monetary", "display_currency": "res_company.currency_id"}'/>
-                                        </td>
-                                    </tr>
-                                    <t t-set="initial_progress" t-value="initial_balance_partner(data, o, 'debit - credit')"/>
-                                    <t t-set="progress" t-value="0"/>
-                                    <tr t-foreach="lines(data, o)" t-as="line">
-                                        <td>
-                                            <span t-esc="line['date']"/>
-                                        </td>
-                                        <td>
-                                            <span t-esc="line['code']"/>
-                                        </td>
-                                        <td>
-                                            <span t-esc="line['a_code']"/>
-                                        </td>
-                                        <td>
-                                            <span t-esc="line['displayed_name']"/>
-                                        </td>
-                                        <td>
-                                            <span t-esc="line['matching_number']"/>
-                                        </td>
-                                        <td class="text-right">
-                                            <span t-esc="line['debit']" t-esc-options='{"widget": "monetary", "display_currency": "res_company.currency_id"}'/>
-                                        </td>
-                                        <td class="text-right">
-                                            <span t-esc="line['credit']" t-esc-options='{"widget": "monetary", "display_currency": "res_company.currency_id"}'/>
-                                        </td>
-                                        <td class="text-right">
-                                            <t t-set="progress" t-value="initial_progress + line['progress']"/>
-                                            <span t-esc="progress" t-esc-options='{"widget": "monetary", "display_currency": "res_company.currency_id"}'/>
-                                        </td>
-                                        <td t-if="amount_currency">
-                                            <span t-esc="line['amount_currency']" t-esc-options='{"widget": "monetary", "display_currency": "line[\"currency_id\"]"}'/>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td colspan="3"></td>
-                                        <td colspan="2">
-                                            <strong>Totals</strong>
-                                        </td>
-                                        <td class="text-right">
-                                            <strong t-esc="sum_partner(data, o, 'debit')" t-esc-options='{"widget": "monetary", "display_currency": "res_company.currency_id"}'/>
-                                        </td>
-                                        <td class="text-right">
-                                            <strong t-esc="sum_partner(data, o, 'credit')" t-esc-options='{"widget": "monetary", "display_currency": "res_company.currency_id"}'/>
-                                        </td>
-                                        <td class="text-right">
-                                            <strong t-esc="sum_partner(data, o, 'debit - credit')" t-esc-options='{"widget": "monetary", "display_currency": "res_company.currency_id"}'/>
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </t>
-                        </table>
+                        <div class="col-xs-3">
+                            <t t-if="data['form']['date_from']"><strong>Date from :</strong> <span t-esc="data['form']['date_from']"/><br/></t>
+                            <t t-if="data['form']['date_to']"><strong>Date to :</strong> <span t-esc="data['form']['date_to']"/></t>
+                        </div>
+                        <div class="col-xs-3">
+                            <strong>Target Moves:</strong>
+                            <p t-if="data['form']['target_move'] == 'all'">All Entries</p>
+                            <p t-if="data['form']['target_move'] == 'posted'">All Posted Entries</p>
+                        </div>
                     </div>
-                </t>
+
+                    <table class="table table-condensed">
+                        <thead>
+                            <tr>
+                                <th class="col-xs-1">Date</th>
+                                <th class="col-xs-1">JRNL</th>
+                                <th class="col-xs-1">Account</th>
+                                <th class="col-xs-4">Ref</th>
+                                <th class="col-xs-1">Debit</th>
+                                <th class="col-xs-1">Credit</th>
+                                <th class="col-xs-1">Balance</th>
+                                <th class="col-xs-1" t-if="amount_currency">Currency</th>
+                                <th class="col-xs-1">Match.</th>
+                            </tr>
+                        </thead>
+                        <t t-foreach="docs" t-as="o">
+                            <tbody>
+                                <tr>
+                                    <td colspan="4">
+                                        <strong t-esc="o.ref"/>
+                                        - <strong t-esc="o.name"/>
+                                    </td>
+                                    <td class="text-right">
+                                        <strong t-esc="sum_partner(data, o, 'debit')" t-esc-options='{"widget": "monetary", "display_currency": "res_company.currency_id"}'/>
+                                    </td>
+                                    <td class="text-right">
+                                        <strong t-esc="sum_partner(data, o, 'credit')" t-esc-options='{"widget": "monetary", "display_currency": "res_company.currency_id"}'/>
+                                    </td>
+                                    <td class="text-right">
+                                        <strong t-esc="sum_partner(data, o, 'debit - credit')" t-esc-options='{"widget": "monetary", "display_currency": "res_company.currency_id"}'/>
+                                    </td>
+                                </tr>
+                                <tr t-foreach="lines(data, o)" t-as="line">
+                                    <td>
+                                        <span t-esc="line['date']"/>
+                                    </td>
+                                    <td>
+                                        <span t-esc="line['code']"/>
+                                    </td>
+                                    <td>
+                                        <span t-esc="line['a_code']"/>
+                                    </td>
+                                    <td>
+                                        <span t-esc="line['displayed_name']"/>
+                                    </td>
+                                    <td class="text-right">
+                                        <span t-esc="line['debit']" t-esc-options='{"widget": "monetary", "display_currency": "res_company.currency_id"}'/>
+                                    </td>
+                                    <td class="text-right">
+                                        <span t-esc="line['credit']" t-esc-options='{"widget": "monetary", "display_currency": "res_company.currency_id"}'/>
+                                    </td>
+                                    <td class="text-right">
+                                        <span t-esc="line['progress']" t-esc-options='{"widget": "monetary", "display_currency": "res_company.currency_id"}'/>
+                                    </td>
+                                    <td t-if="amount_currency">
+                                        <span t-esc="line['amount_currency']" t-esc-options='{"widget": "monetary", "display_currency": "line[\"currency_id\"]"}'/>
+                                    </td>
+                                    <td>
+                                        <span t-esc="line['matching_number']"/>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </t>
+                    </table>
+                </div>
             </t>
         </t>
     </template>
