--- a/views/report_partnerledger.xml
+++ b/views/report_partnerledger.xml
@@ -7,9 +7,8 @@
             <t t-set="data_report_header_spacing" t-value="9"/>
             <t t-set="data_report_dpi" t-value="110"/>
             <t t-call="report.internal_layout">
-                <div class="page">
+                <div class="page" style="font-size:11px">
                     <h2>Partner Ledger</h2>
-
                     <div class="row">
                         <div class="col-xs-3">
                             <strong>Company:</strong>
@@ -48,13 +47,13 @@
                                         - <strong t-esc="o.name"/>
                                     </td>
                                     <td class="text-right">
-                                        <strong t-esc="sum_partner(data, o, 'debit')" t-esc-options='{"widget": "monetary", "display_currency": "res_company.currency_id"}'/>
+                                        <strong t-esc="sum_partner(data, o, 'debit')" t-esc-options='{"widget": "monetary", "display_currency": res_company.currency_id}'/>
                                     </td>
                                     <td class="text-right">
-                                        <strong t-esc="sum_partner(data, o, 'credit')" t-esc-options='{"widget": "monetary", "display_currency": "res_company.currency_id"}'/>
+                                        <strong t-esc="sum_partner(data, o, 'credit')" t-esc-options='{"widget": "monetary", "display_currency": res_company.currency_id}'/>
                                     </td>
                                     <td class="text-right">
-                                        <strong t-esc="sum_partner(data, o, 'debit - credit')" t-esc-options='{"widget": "monetary", "display_currency": "res_company.currency_id"}'/>
+                                        <strong t-esc="sum_partner(data, o, 'debit - credit')" t-esc-options='{"widget": "monetary", "display_currency": res_company.currency_id}'/>
                                     </td>
                                 </tr>
                                 <tr t-foreach="lines(data, o)" t-as="line">
@@ -71,16 +70,16 @@
                                         <span t-esc="line['displayed_name']"/>
                                     </td>
                                     <td class="text-right">
-                                        <span t-esc="line['debit']" t-esc-options='{"widget": "monetary", "display_currency": "res_company.currency_id"}'/>
+                                        <span t-esc="line['debit']" t-esc-options='{"widget": "monetary", "display_currency": res_company.currency_id}'/>
                                     </td>
                                     <td class="text-right">
-                                        <span t-esc="line['credit']" t-esc-options='{"widget": "monetary", "display_currency": "res_company.currency_id"}'/>
+                                        <span t-esc="line['credit']" t-esc-options='{"widget": "monetary", "display_currency": res_company.currency_id}'/>
                                     </td>
                                     <td class="text-right">
-                                        <span t-esc="line['progress']" t-esc-options='{"widget": "monetary", "display_currency": "res_company.currency_id"}'/>
+                                        <span t-esc="line['progress']" t-esc-options='{"widget": "monetary", "display_currency": res_company.currency_id}'/>
                                     </td>
                                     <td t-if="amount_currency">
-                                        <span t-esc="line['amount_currency']" t-esc-options='{"widget": "monetary", "display_currency": "line[\"currency_id\"]"}'/>
+                                        <span t-esc="line['amount_currency']" t-esc-options='{"widget": "monetary", "display_currency": line["currency_id"]}'/>
                                     </td>
                                     <td>
                                         <span t-esc="line['matching_number']"/>
