[IMP] Report ledger : add due date

--- a/views/report_partnerledger.xml
+++ b/views/report_partnerledger.xml
@@ -31,7 +31,8 @@
                                 <th class="col-xs-1">Date</th>
                                 <th class="col-xs-1">JRNL</th>
                                 <th class="col-xs-1">Account</th>
-                                <th class="col-xs-4">Ref</th>
+                                <th class="col-xs-3">Ref</th>
+                                <th class="col-xs-1">Due Date</th>
                                 <th class="col-xs-1">Debit</th>
                                 <th class="col-xs-1">Credit</th>
                                 <th class="col-xs-1">Balance</th>
@@ -68,6 +69,9 @@
                                     </td>
                                     <td>
                                         <span t-esc="line['displayed_name']"/>
+                                    </td>
+                                    <td>
+                                        <span t-esc="line['date_maturity']"/>
                                     </td>
                                     <td class="text-right">
                                         <span t-esc="line['debit']" t-esc-options='{"widget": "monetary", "display_currency": res_company.currency_id}'/>
