[IMP] Add ref partner if exist

--- a/views/report_partnerledger.xml
+++ b/views/report_partnerledger.xml
@@ -27,7 +27,7 @@
                                 <tbody>
                                     <tr>
                                         <td colspan="8">
-                                            <strong t-esc="o.name"/>
+                                            <strong t-if="o.ref">[</strong><strong t-if="o.ref" t-esc="o.ref"/><strong t-if="o.ref">] </strong><strong t-esc="o.name"/>
                                         </td>
                                     </tr>
                                     <tr>
