--- a/wizard/account_report_partner_ledger_view.xml
+++ b/wizard/account_report_partner_ledger_view.xml
@@ -7,6 +7,10 @@
             <field name="inherit_id" ref="account.account_common_report_view"/>
             <field name="arch" type="xml">
                 <data>
+                  <xpath expr="//field[@name='reconciled']" position="after">
+                    <newline/>
+                    <field name="rem_futur_reconciled" attrs="{'invisible': [('date_to', '=', False)]}"/>
+                  </xpath>
                     <xpath expr="//field[@name='journal_ids']/.." position="after">
                         <group col="3">
                             <field name="partner_ids" widget="many2many_tags" options="{'no_create': True}"/>
