--- a/wizard/account_report_partner_ledger_view.xml
+++ b/wizard/account_report_partner_ledger_view.xml
@@ -1,28 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
     <data>
-        <record id="account_report_partner_ledger_view" model="ir.ui.view">
+        <record id="account_report_extra_partner_ledger_view" model="ir.ui.view">
             <field name="name">Partner Ledger</field>
             <field name="model">account.report.partner.ledger</field>
-            <field name="inherit_id" ref="account.account_common_report_view"/>
             <field name="arch" type="xml">
-                <data>
-                    <xpath expr="//field[@name='reconciled']" position="after">
-                        <newline/>
-                        <field name="rem_futur_reconciled" attrs="{'invisible': [('date_to', '=', False)]}"/>
-                    </xpath>
-                    <xpath expr="//field[@name='date_from']" position="replace">
-                        <field name="date_from_init"/>
-                    </xpath>
-                    <xpath expr="//field[@name='journal_ids']/.." position="after">
-                        <group col="3">
-                            <field name="partner_ids" widget="many2many_tags" options="{'no_create': True}"/>
+                <form string="Report Options">
+                    <field name="company_id" invisible="1"/>
+                    <group col="4">
+                        <field name="target_move" widget="radio"/>
+                        <field name="reconciled"/>
+                        <field name="result_selection"/>
+                        <field name="amount_currency" groups="base.group_multi_currency"/>
+                    </group>
+                    <group col="2">
+                      <group>
+                        <field name="date_from"/>
+                        <field name="with_init_balance" attrs="{'readonly': ['|', ('reconciled', '=', False), ('date_from', '=', False)]}"/>
                         </group>
-                        <group col="3">
-                            <field name="account_exclude_ids" widget="many2many_tags" options="{'no_create': True}"/>
+                      <group>
+                        <field name="date_to"/>
+                        <field name="rem_futur_reconciled" attrs="{'readonly': [('date_to', '=', False)]}"/>
                         </group>
-                    </xpath>
-                </data>
+                    </group>
+                    <group>
+                        <field name="journal_ids" widget="many2many_tags" options="{'no_create': True}"/>
+                    </group>
+                    <group col="3">
+                        <field name="partner_ids" widget="many2many_tags" options="{'no_create': True}"/>
+                    </group>
+                    <group col="3">
+                        <field name="account_exclude_ids" widget="many2many_tags" options="{'no_create': True}"/>
+                    </group>
+                    <footer>
+                        <button name="check_report" string="Print" type="object" default_focus="1" class="oe_highlight"/>
+                        or
+                        <button string="Cancel" class="oe_link" special="cancel"/>
+                    </footer>
+                </form>
             </field>
         </record>
 
@@ -32,17 +47,8 @@
             <field name="res_model">account.report.partner.ledger</field>
             <field name="view_type">form</field>
             <field name="view_mode">form</field>
-            <field name="view_id" ref="account_report_partner_ledger_view"/>
+            <field name="view_id" ref="account_report_extra_partner_ledger_view"/>
             <field name="target">new</field>
-        </record>
-
-        <record id="action_account_partner_ledger_values" model="ir.values">
-            <field name="model_id" ref="account.model_account_account"/>
-            <field name="name">Partner Ledger</field>
-            <field name="key2">client_print_multi</field>
-            <field name="value" eval="'ir.actions.act_window,' +str(ref('action_account_partner_ledger_menu'))"/>
-            <field name="key">action</field>
-            <field name="model">account.account</field>
         </record>
 
         <menuitem id="menu_partner_ledger" name="Partner Ledger" parent="account.account_reports_management_menu" action="action_account_partner_ledger_menu" groups="account.group_account_manager,account.group_account_user"/>
